name:                haskoin-bitcoind
version:             0.2.0
synopsis:            An adapter for haskoin to network-bitcoin
-- description:         
homepage:            haskoin.com
license:             BSD3
license-file:        LICENSE
author:              Matthew Wraith
maintainer:          wraithm@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Network.Bitcoin.Haskoin,
    Network.Bitcoin.Haskoin.Trans
  -- other-modules:       
  -- other-extensions:    OverloadedStrings
  build-depends:       
    base                >= 4.8 && <4.9,
    bytestring          >= 0.10.6,
    base16-bytestring   >= 0.1.1.6,
    text                >= 1.2.1.3,
    haskoin             >= 0.2.0,
    network-bitcoin     >= 1.8.2,
    mtl                 >= 2.2,
    monad-control       >= 0.1,
    transformers        >= 0.3,
    transformers-base   >= 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
